--- a/src/app/component/job-detail-modal/job-detail-modal.component.scss
+++ b/src/app/component/job-detail-modal/job-detail-modal.component.scss
@@ -89,7 +89,7 @@ button[mat-icon-button].close-button {
   border: none;
   cursor: pointer;
   width: 5vw;
-  margin-left: 635px;
+  margin-left: 90%;
 }
 .task-title{
   margin-left: 20px;
